minor typo fixes

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                   </div>
                   <div class="columns mt-4">
                     <div class="column">
-                      <p class="is-size-6 mb-2">Synthesized Left View</p>
+                      <p class="is-size-6 mb-2">Simulation</p>
                       <img src=".\static\images\augmented_states\coordinated_push_box\real_coordinated_push_box_augstates.png" alt="Real World - Push Block" class="has-shadow" style="transform:scale(0.95)" />
                     </div>
                   </div>
