--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
   <script src="./static/js/bulma-carousel.min.js"></script>
   <script src="./static/js/bulma-slider.min.js"></script>
   <script src="./static/js/index.js"></script>
+  <script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
 
@@ -170,7 +172,23 @@
                  alt="Interpolate start reference image."/>
         <div class="content has-text-justified">
           <p>
-            We design a diffusion model that takes two reference wrist images and camera pose pertubations as input and synthesize novel viewpoint-consistent wrist-camera images for both arms. For contact-less states, we uniformly sample random camera pose pertubations. For contact-rich states, we employ constrained optimization to ensure the pertubations satisfy coordination constraints required for bimanual manipulation. 
+            <b>(i):</b>The diffusion model is an iterative denoiser that learns to map source wrist-camera images 
+            \( I_a^l \) and \( I_a^r \) to target wrist-camera images \( I_b^l \) and \( I_b^r \), 
+            conditioned on pose transformations \( \Delta p^{l} \) and \( \Delta p^{r} \), using the original dataset 
+            (i.e., the dataset to be augmented).
+          </p>
+          <p>
+            <b>(ii):</b> We use SAM2 to decompose a bimanual manipulation task into contactless and contact-rich states.
+            We uniformly sample random camera pose perturbations for contactless states 
+            (<span style="color: green;">green</span> and <span style="color:darkgoldenrod;">yellow</span> dots). 
+            For contact-rich states (<span style="color:maroon;">maroon</span> dots), we use constrained optimization to sample perturbations 
+            that satisfy a set of constraints suitable for coordinated manipulation.
+            We then employ the trained diffusion model to synthesize novel views based on the original dataset, 
+            using its images and corresponding sampled perturbations. This generates an augmented dataset.
+            </p>
+            
+            <p>
+            <b>(iii):</b> We combine the original and augmented datasets to train a bimanual manipulation policy.
           </p>
         </div>
       </div>
@@ -197,7 +215,7 @@
                     <select id="task-selector">
                       <option value="coordinated_lift_ball">Lift Ball</option>
                       <option value="coordinated_lift_tray">Lift Tray</option>
-                      <option value="coordinated_push_box">Push Block</option>
+                      <option value="coordinated_push_box">Push Box</option>
                       <option value="dual_push_buttons">Dual Push Buttons</option>
                       <option value="bimanual_straighten_rope">Bimanual Straighten Rope</option>
                     </select>
@@ -244,13 +262,13 @@
                   <div class="columns">
                     <div class="column">
                       <p class="is-size-6 mb-2">Simulation</p>
-                      <img src=".\static\images\augmented_states\coordinated_push_box\sim_coordinated_push_box_augstates.png" alt="Simulation - Push Block" class="has-shadow" style="transform:scale(0.95)"/>
+                      <img src=".\static\images\augmented_states\coordinated_push_box\sim_coordinated_push_box_augstates.png" alt="Simulation - Push Box" class="has-shadow" style="transform:scale(0.95)"/>
                     </div>
                   </div>
                   <div class="columns mt-4">
                     <div class="column">
                       <p class="is-size-6 mb-2">Simulation</p>
-                      <img src=".\static\images\augmented_states\coordinated_push_box\real_coordinated_push_box_augstates.png" alt="Real World - Push Block" class="has-shadow" style="transform:scale(0.95)" />
+                      <img src=".\static\images\augmented_states\coordinated_push_box\real_coordinated_push_box_augstates.png" alt="Real World - Push Box" class="has-shadow" style="transform:scale(0.95)" />
                     </div>
                   </div>
                 </div>
@@ -319,21 +337,21 @@
             </div>
           </div>
           
-          <div class="columns is-centered mt-4">
+          <div class="columns is-centered">
             <div class="column">
               <div id="trajectory-container" class="has-text-centered">
-                <div class="html-embed-container" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                <div class="html-embed-container" style="position: relative; padding-bottom: 80%; overflow: hidden;">
                   <iframe 
                     id="trajectory-iframe"
                     src="./static/html/coordinated_lift_ball.html" 
-                    style="position: absolute; top: 0; left: 0; width: 100%; height: 80%; border: none; border-radius: 10px;">
+                    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; border-radius: 10px;">
                   </iframe>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="columns is-centered mt-4">
+          <div class="columns is-centered" style="margin-top:-5%;">
             <div class="column is-three-quarters">
               <p class="has-text-centered is-size-6" style="text-align:start;">
                 Click and drag to rotate. Right click and drag to pan. Scroll up to zoom in. Scroll down to zoom out. For more controls, check the upper right hand corner.
@@ -351,7 +369,7 @@
         <h2 class="title is-3">Rollout Comparisons</h2>
         <div class="content has-text-justified">
           <p>
-            These are rollout comparisons of ACT Baseline without augmentation on the left with <span class="dnerf">D-CODA</span> on the right.
+            These are rollout comparisons between the ACT Baseline without augmentation (left) and <span class="dnerf">D-CODA</span> (right).
           </p>
         </div>
         <div class="col">
@@ -359,7 +377,7 @@
             <source src=".\static\videos\rollout_comparisons\real_coordinated_lift_ball_comparison.mp4" type="video/mp4">
           </video>
           <h1 class="title is-6" style="text-align: center; font-weight: normal; margin-bottom: 0.5rem;">The ACT baseline froze, while <span class="dnerf">D-CODA</span> was able to succeed.</h1>
-          <h1 class="title is-5" style="text-align: center;">Coordinated Lift Ball</h1>
+          <h1 class="title is-5" style="text-align: center;">Lift Ball</h1>
         </div>
         <div class="section-div"></div>
 
@@ -368,7 +386,7 @@
             <source src=".\static\videos\rollout_comparisons\real_coordinated_lift_drawer_comparison.mp4" type="video/mp4">
           </video>
           <h1 class="title is-6" style="text-align: center; font-weight: normal; margin-bottom: 0.5rem;">The ACT baseline froze, while <span class="dnerf">D-CODA</span> was able to succeed.</h1>
-          <h1 class="title is-5" style="text-align: center;">Coordinated Lift Drawer</h1>
+          <h1 class="title is-5" style="text-align: center;">Lift Drawer</h1>
         </div>
         <div class="section-div"></div>
 
@@ -377,7 +395,7 @@
             <source src=".\static\videos\rollout_comparisons\real_coordinated_push_block_comparison.mp4" type="video/mp4">
           </video>
           <h1 class="title is-6" style="text-align: center; font-weight: normal; margin-bottom: 0.5rem;">The ACT baseline froze, while <span class="dnerf">D-CODA</span> was able to succeed.</h1>
-          <h1 class="title is-5" style="text-align: center;">Coordinated Push Box</h1>
+          <h1 class="title is-5" style="text-align: center;">Push Block</h1>
         </div>
         <div class="section-div"></div>
       </div>
@@ -590,7 +608,7 @@
         <h2 class="title is-3">Variation Expirements</h2>
         <div class="content has-text-justified">
           <p>
-            These are real-world expirements with different variations on each task <span class="dnerf">D-CODA</span>.
+            These are real-world expirements with different variations for each task using <span class="dnerf">D-CODA</span>.
           </p>
         </div>
       </div>
