--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                   </div>
                   <div class="columns mt-4">
                     <div class="column">
-                      <p class="is-size-6 mb-2">Simulation</p>
+                      <p class="is-size-6 mb-2">Real-World</p>
                       <img src=".\static\images\augmented_states\coordinated_push_box\real_coordinated_push_box_augstates.png" alt="Real World - Push Box" class="has-shadow" style="transform:scale(0.95)" />
                     </div>
                   </div>
@@ -322,7 +322,7 @@
         <div class="mobile-message">
           <h3 class="title is-6">Mobile Device Detected</h3>
           <p>This interactive 3D visualization is optimized for desktop viewing. Please visit on a desktop device for the full experience.</p>
-          <p>The visualization shows camera position trajectories for robotics tasks including Lift Ball, Lift Tray, and Push Block scenarios.</p>
+          <p>The visualization shows original and augmented camera position for various robotic tasks.</p>
         </div>
 
         <div class="desktop-content">
