--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                   </div>
                   <div class="columns mt-4">
                     <div class="column">
-                      <p class="is-size-6 mb-2">Real-World</p>
+                      <p class="is-size-6 mb-2">Real-World (A block was used instead of a box)</p>
                       <img src=".\static\images\augmented_states\coordinated_push_box\real_coordinated_push_box_augstates.png" alt="Real World - Push Box" class="has-shadow" style="transform:scale(0.95)" />
                     </div>
                   </div>
@@ -361,7 +361,7 @@
             <div class="columns is-centered" style="margin-top:-5%;">
               <div class="column is-three-quarters">
                 <p class="has-text-centered is-size-6" style="text-align:start;">
-                  Click and drag to rotate. Right click and drag to pan. Scroll up to zoom in. Scroll down to zoom out. For more controls, check the upper right hand corner.
+                  Left click and drag to rotate. Right click and drag to pan. Scroll up to zoom in. Scroll down to zoom out. For more controls, check the upper right hand corner.
                 </p>
               </div>
             </div>
