--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                   </div>
                   <div class="columns mt-4">
                     <div class="column">
-                      <p class="is-size-6 mb-2">Real-World (A block was used instead of a box)</p>
+                      <p class="is-size-6 mb-2">Simulation</p>
                       <img src=".\static\images\augmented_states\coordinated_push_box\real_coordinated_push_box_augstates.png" alt="Real World - Push Box" class="has-shadow" style="transform:scale(0.95)" />
                     </div>
                   </div>
@@ -322,7 +322,7 @@
         <div class="mobile-message">
           <h3 class="title is-6">Mobile Device Detected</h3>
           <p>This interactive 3D visualization is optimized for desktop viewing. Please visit on a desktop device for the full experience.</p>
-          <p>The visualization shows original and augmented camera position for various robotic tasks.</p>
+          <p>The visualization shows original and augmented camera position for robotic tasks.</p>
         </div>
 
         <div class="desktop-content">
@@ -361,7 +361,7 @@
             <div class="columns is-centered" style="margin-top:-5%;">
               <div class="column is-three-quarters">
                 <p class="has-text-centered is-size-6" style="text-align:start;">
-                  Left click and drag to rotate. Right click and drag to pan. Scroll up to zoom in. Scroll down to zoom out. For more controls, check the upper right hand corner.
+                  Click and drag to rotate. Right click and drag to pan. Scroll up to zoom in. Scroll down to zoom out. For more controls, check the upper right hand corner.
                 </p>
               </div>
             </div>
