--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                  alt="Hero Figure"/>
       <h2 class="subtitle has-text-centered">
         <span class="dnerf">D-CODA</span> is a
-        method for offline data augmentation in bimanual eye-in-hand imitation learning
+        method for offline data augmentation tailored to eye-in-hand bimanual imitation learning
       </h2>
     </div>
   </div>
