fix rollout videos

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
           </p>
         </div>
         <div class="col">
-          <video poster controls muted loop playsinline style="border-radius: 10px" preload="metadata">
+          <video controls muted loop playsinline style="border-radius: 10px" preload="none" poster="./static/videos/rollout_comparisons/real_coordinated_lift_ball_comparison_thumbnail.jpg">
             <source src=".\static\videos\rollout_comparisons\real_coordinated_lift_ball_comparison.mp4" type="video/mp4">
           </video>
           <!-- <h1 class="title is-6" style="text-align: center; font-weight: normal; margin-bottom: 0.5rem;">The ACT baseline froze, while <span class="dnerf">D-CODA</span> was able to succeed.</h1> -->
@@ -402,7 +402,7 @@
         <div class="section-div"></div>
 
         <div class="col">
-          <video poster muted controls loop playsinline style="border-radius: 10px" preload="metadata">
+          <video muted controls loop playsinline style="border-radius: 10px" preload="none" poster="./static/videos/rollout_comparisons/real_coordinated_lift_drawer_comparison_thumbnail.jpg">
             <source src=".\static\videos\rollout_comparisons\real_coordinated_lift_drawer_comparison.mp4" type="video/mp4">
           </video>
           <!-- <h1 class="title is-6" style="text-align: center; font-weight: normal; margin-bottom: 0.5rem;">The ACT baseline froze, while <span class="dnerf">D-CODA</span> was able to succeed.</h1> -->
@@ -411,7 +411,7 @@
         <div class="section-div"></div>
 
         <div class="col">
-          <video poster muted controls loop playsinline style="border-radius: 10px" preload="metadata">
+          <video muted controls loop playsinline style="border-radius: 10px" preload="none" poster="./static/videos/rollout_comparisons/real_coordinated_push_block_comparison_thumbnail.jpg">
             <source src=".\static\videos\rollout_comparisons\real_coordinated_push_block_comparison.mp4" type="video/mp4">
           </video>
           <!-- <h1 class="title is-6" style="text-align: center; font-weight: normal; margin-bottom: 0.5rem;">The ACT baseline froze, while <span class="dnerf">D-CODA</span> was able to succeed.</h1> -->
